# TODO: This is going to require rethinking generators.
# Currently generators create the list of output files in the invocation of
# process(), but meson creates them during backend output when they are
# associated with a target, so that the output can be put in the target's
# output directory.

project('conf file in generator', 'c')

subdir('inc')
subdir('src')
